--- a/css/index.css
+++ b/css/index.css
@@ -219,6 +219,10 @@ body {
 /*---------------------- testimonials------------------------------- */
 /*------------------------------------------------------------------ */
 /*----------------------------------------- blog ------------------- */
+.blog__image {
+  font-size: 25px;
+}
+
 /*------------------------------------------------------------------ */
 /*-------------------- instagram------------------------------------ */
 /*------------------------------------------------------------------ */
