--- a/#source/scss/structure/content/products.scss
+++ b/#source/scss/structure/content/products.scss
@@ -1,20 +1,29 @@
 .products {
 }
+
 .products__row {
 }
+
 .products__column {
 }
+
 .products__wrapper {
 }
+
 .products__image {
 }
+
 .title-h3 {
 }
+
 .text {
 }
-.about__text {
+
+.products__text {
 }
+
 .bth {
 }
-.about__bth {
+
+.products__bth {
 }
