--- a/#source/scss/structure/content/smoothies.scss
+++ b/#source/scss/structure/content/smoothies.scss
@@ -1,6 +1,9 @@
 .smoothies {
+	margin: 115px 0 150px 0;
 }
 .content-smoothies {
+	max-width: 1100px;
+	margin: 0 auto;
 }
 .smoothies__desripction {
 }
