--- a/#source/scss/structure/content/testimonials.scss
+++ b/#source/scss/structure/content/testimonials.scss
@@ -1,20 +1,32 @@
 .testimonials {
 }
+
 .title {
 }
+
 .testimonials__row {
 }
+
 .testimonials__column {
 }
+
 .text {
 }
+
 .testimonials__sub-text {
 }
+
 .testimonials-name__user {
 }
+
+.testimonials-avatar {
+}
+
 .sidebar {
 }
+
 .arrow__left {
 }
+
 .arrow__right {
 }
