--- a/css/index.css
+++ b/css/index.css
@@ -206,9 +206,233 @@ body {
 /*--**************************************************************-- */
 /*-----------------*****Структура(structure)*****------------------- */
 /*-------------------- Header(шапка докуманта) --------------------- */
+.header {
+  position: absolute;
+  top: 70px;
+  left: 0;
+  z-index: 50;
+  width: 100%;
+  height: 100%;
+}
+
+.conteiner {
+  max-width: 1750px;
+  margin: 0 auto;
+  border: 1px solid #000;
+  height: 100%;
+}
+
+.header__row {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+}
+
+.header__top {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+}
+
+.header__column {
+  -webkit-box-flex: 0;
+      -ms-flex: 0 1 53.333%;
+          flex: 0 1 53.333%;
+  border: 1px solid #000;
+}
+
+.header__column:nth-child(2) {
+  -webkit-box-flex: 0;
+      -ms-flex: 0 1 13.333%;
+          flex: 0 1 13.333%;
+  border: 1px solid #000;
+}
+
+.nav__list {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  margin: 0 -3%;
+}
+
+.nav__item {
+  margin: 0 3%;
+}
+
+.nav__item a {
+  color: #ffffff;
+  font-family: "Muli-Bold";
+  font-size: 16px;
+  text-transform: uppercase;
+}
+
+.header__image {
+  text-align: center;
+}
+
+.icon__wrapper {
+  border: 1px solid #000;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+}
+
+.icon__column:nth-child(1) {
+  border: 1px solid #f30404;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: end;
+      -ms-flex-pack: end;
+          justify-content: flex-end;
+  -webkit-box-flex: 1;
+      -ms-flex: 1 0 33.333%;
+          flex: 1 0 33.333%;
+  -ms-flex-item-align: center;
+      -ms-grid-row-align: center;
+      align-self: center;
+}
+
+.icon__column:nth-child(1) .icon__list {
+  margin: 0 4.4610992148%;
+}
+
+.icon__column:nth-child(1) .icon__list:nth-child(1) {
+  margin: 0 4.4610992148% 0 0;
+}
+
+.icon__column:nth-child(1) .icon__list:nth-child(3) {
+  margin: 0 0 0 4.4610992148%;
+  position: relative;
+  top: 0;
+  left: 0;
+}
+
+.icon__column:nth-child(2) {
+  margin: 0 5.2390307793% 0 6.5487884741%;
+  border: 1px solid rgba(88, 87, 87, 0.308);
+  -webkit-transform: rotate(90deg);
+      -ms-transform: rotate(90deg);
+          transform: rotate(90deg);
+  -webkit-box-flex: 0;
+      -ms-flex: 0 1 0%;
+          flex: 0 1 0%;
+}
+
+.icon__column:nth-child(3) {
+  border: 1px solid #f30404;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-flex: 0;
+      -ms-flex: 0 1 0%;
+          flex: 0 1 0%;
+  -webkit-box-pack: end;
+      -ms-flex-pack: end;
+          justify-content: flex-end;
+}
+
+.icon__column:nth-child(3) .icon__list {
+  margin: 0 7.5px;
+}
+
+.icon__column:nth-child(3) .icon__list:nth-child(1) {
+  margin: 0 7.5px 0 0;
+}
+
+.icon__column:nth-child(3) .icon__list:nth-child(3) {
+  margin: 0 0 0 7.5px;
+}
+
+.icon__tabs {
+  position: absolute;
+  top: -15px;
+  right: -22px;
+  background-color: #ffffff;
+  border-radius: 50%;
+  text-align: center;
+  padding-top: 8px;
+  width: 25px;
+  height: 25px;
+  font-size: 12px;
+}
+
+.header__bottom {
+  -ms-flex-item-align: center;
+      -ms-grid-row-align: center;
+      align-self: center;
+}
+
+.bth {
+  border: 1px solid #036b416b;
+  color: #ffffff;
+  font-family: "Muli-Regular";
+  width: 280px;
+  height: 70px;
+  background-color: #0aa566;
+  border-radius: 35px;
+  text-indent: 40px;
+  padding-top: 20px;
+  font-size: 24px;
+  -webkit-transition: -webkit-transform 500ms ease;
+  transition: -webkit-transform 500ms ease;
+  -o-transition: transform 500ms ease;
+  transition: transform 500ms ease;
+  transition: transform 500ms ease, -webkit-transform 500ms ease;
+}
+
+.bth:hover {
+  -webkit-transform: translate(50px);
+      -ms-transform: translate(50px);
+          transform: translate(50px);
+}
+
+.header__bth {
+  display: inline-block;
+  margin-top: 105px;
+  position: relative;
+  top: 0;
+  left: 0;
+}
+
+.header__bth:after {
+  content: "";
+  position: absolute;
+  top: 23px;
+  right: 25px;
+  display: inline-block;
+  background: url(/assets/images/header/Arrow.png) center/cover no-repeat;
+  width: 40px;
+  height: 20px;
+}
+
+.header__background {
+  position: relative;
+  top: 0;
+  left: 0;
+  height: 100vh;
+  width: 100%;
+}
+
 /*------------------------------------------------------------------ */
 /*-------------------- Content(контент страницы) ------------------- */
 /*---------------------- smoothies-------------- ------------------- */
+.smoothies {
+  margin: 115px 0 150px 0;
+}
+
+.content-smoothies {
+  max-width: 1100px;
+  margin: 0 auto;
+}
+
 /*------------------------------------------------------------------ */
 /*------------------------------- about----------------------------- */
 /*------------------------------------------------------------------ */
@@ -219,10 +443,6 @@ body {
 /*---------------------- testimonials------------------------------- */
 /*------------------------------------------------------------------ */
 /*----------------------------------------- blog ------------------- */
-.blog__image {
-  font-size: 25px;
-}
-
 /*------------------------------------------------------------------ */
 /*-------------------- instagram------------------------------------ */
 /*------------------------------------------------------------------ */
