--- a/#source/scss/structure/content/smoothies.scss
+++ b/#source/scss/structure/content/smoothies.scss
@@ -8,14 +8,74 @@
 .smoothies__desripction {
 }
 .title {
+	text-align: center;
+	font-size: 50px;
+	color: rgb(247, 174, 59);
 }
 .text {
+	font-size: 18px;
+	line-height: 35px;
+	text-align: center;
+	padding: 0 90px;
+	font-family: "Muli-Regular";
 }
+.smoothie__text {
+	margin: 60px 0 65px 0;
+}
+
 .smoothies__row {
+	display: flex;
+	flex-wrap: wrap;
+	margin: 0 6%;
 }
+//------------------------------------------------------
 .smoothies__column {
+	flex: 1 0 25%;
+	text-align: center;
+	border-bottom: 1px solid #f6edde;
+	border-left: 1px solid #f6edde;
 }
+
+.smoothies__column:nth-child(1) {
+	border-bottom: 1px solid #f6edde;
+	border-left: 0px solid #f6edde;
+}
+
+.smoothies__column:nth-child(5) {
+	border-bottom: 0px solid #f6edde;
+	border-left: 0px solid #f6edde;
+}
+
+.smoothies__column:nth-child(6),
+.smoothies__column:nth-child(7),
+.smoothies__column:nth-child(8) {
+	border-bottom: 0px solid #f6edde;
+	border-left: 1px solid #f6edde;
+}
+
+//------------------------------------------------------
+.smoothie__title {
+	color: #f2612d;
+	font-size: 18px;
+	margin-bottom: 40px;
+}
+
 .smoothies__wrapper {
+	display: flex;
+	flex-direction: column;
+	height: 100%;
 }
 .smoothies__image {
+	margin: 27px 0;
+	flex: 1 1 100%;
+}
+@media (max-width: 768px) {
+	.smoothies__column {
+		flex: 1 0 50%;
+	}
+}
+@media (max-width: 468px) {
+	.smoothies__column {
+		flex: 1 1 100%;
+	}
 }
