--- a/css/index.css
+++ b/css/index.css
@@ -433,6 +433,97 @@ body {
   margin: 0 auto;
 }
 
+.title {
+  text-align: center;
+  font-size: 50px;
+  color: #f7ae3b;
+}
+
+.text {
+  font-size: 18px;
+  line-height: 35px;
+  text-align: center;
+  padding: 0 90px;
+  font-family: "Muli-Regular";
+}
+
+.smoothie__text {
+  margin: 60px 0 65px 0;
+}
+
+.smoothies__row {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -ms-flex-wrap: wrap;
+      flex-wrap: wrap;
+  margin: 0 6%;
+}
+
+.smoothies__column {
+  -webkit-box-flex: 1;
+      -ms-flex: 1 0 25%;
+          flex: 1 0 25%;
+  text-align: center;
+  border-bottom: 1px solid #f6edde;
+  border-left: 1px solid #f6edde;
+}
+
+.smoothies__column:nth-child(1) {
+  border-bottom: 1px solid #f6edde;
+  border-left: 0px solid #f6edde;
+}
+
+.smoothies__column:nth-child(5) {
+  border-bottom: 0px solid #f6edde;
+  border-left: 0px solid #f6edde;
+}
+
+.smoothies__column:nth-child(6),
+.smoothies__column:nth-child(7),
+.smoothies__column:nth-child(8) {
+  border-bottom: 0px solid #f6edde;
+  border-left: 1px solid #f6edde;
+}
+
+.smoothie__title {
+  color: #f2612d;
+  font-size: 18px;
+  margin-bottom: 40px;
+}
+
+.smoothies__wrapper {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  height: 100%;
+}
+
+.smoothies__image {
+  margin: 27px 0;
+  -webkit-box-flex: 1;
+      -ms-flex: 1 1 100%;
+          flex: 1 1 100%;
+}
+
+@media (max-width: 768px) {
+  .smoothies__column {
+    -webkit-box-flex: 1;
+        -ms-flex: 1 0 50%;
+            flex: 1 0 50%;
+  }
+}
+@media (max-width: 468px) {
+  .smoothies__column {
+    -webkit-box-flex: 1;
+        -ms-flex: 1 1 100%;
+            flex: 1 1 100%;
+  }
+}
 /*------------------------------------------------------------------ */
 /*------------------------------- about----------------------------- */
 /*------------------------------------------------------------------ */
