--- a/#source/scss/structure/content/about.scss
+++ b/#source/scss/structure/content/about.scss
@@ -1,29 +1,129 @@
 .about {
+	background-color: #15876c;
+}
+
+.about__conteiner {
+	max-width: 1920px;
+	margin: 0 auto 0 0;
+	border: 1px solid #000;
 }
 
 .about__row {
+	display: flex;
+	border: 1px solid #000;
 }
 
-.about__column {
+.about__column:nth-child(1) {
+	position: relative;
+	top: 75px;
+	left: 0;
+	margin: 0px 140px/1920px * 100%;
+	border: 1px solid #000;
 }
 
 .about__image {
+	display: flex;
+	flex-direction: column;
+	justify-content: flex-end;
+	height: 100%;
+}
+.about__image-wrapper {
+	border: 1px solid #000;
+}
+.about__image img {
+	width: 100%;
+	height: 100%;
 }
 
 .about__description {
+	height: 100%;
+	margin: 100px 0 60px 0;
+	border: 1px solid #000;
 }
 
-.title {
+.title--white {
+	color: #ffffff;
+}
+
+.about__title {
+	font-size: 55px;
+	text-align-last: left;
+}
+
+.about__title span {
+	color: #cae941;
 }
 
 .about__list {
+	margin: 70px 0 55px 0;
 }
 
 .about__item {
+	line-height: 25px;
+	margin-top: 30px;
+	padding-left: 35px;
+	position: relative;
+	top: 0;
+	left: 0;
+	color: #ffffff;
+	font-size: 21px;
+	font-family: "Muli-Regular";
+}
+.about__item:before {
+	content: "";
+	background: url(/assets/images/about/icon.png) center/cover no-repeat;
+	display: inline-block;
+	position: absolute;
+	top: 3px;
+	left: 0;
+	width: 20px;
+	height: 20px;
 }
 
-.__about__link {
+.about__bth {
+	font-size: 24px;
+	background-color: rgb(21, 134, 110);
+	width: 380px;
+	height: 60px;
+	border-radius: 30px;
+	text-indent: -60px;
+	border: 1px solid rgb(175, 163, 68);
+}
+.about__bth:after {
+	content: "";
+	position: absolute;
+	top: 25px;
+	right: 25px;
+	display: inline-block;
+	background: url("/assets/images/header/Arrow.png") center/ cover no-repeat;
+	width: 30px;
+	height: 10px;
 }
 
-.bth {
+@media (max-width: 1420px) {
+	.about__column:nth-child(1) {
+		position: relative;
+		top: 75px;
+		left: 0;
+		margin: 0px 20px/1920px * 100% 0 0;
+		border: 1px solid #000;
+	}
+	.about__column {
+		flex: 1 0 50%;
+	}
+}
+@media (max-width: 1024px) {
+	.about__column {
+		flex: 1 1 auto;
+	}
+	.about__row {
+		display: flex;
+		flex-wrap: wrap;
+	}
+	.about__column:nth-child(1) {
+		order: 2;
+	}
+	.about__column:nth-child(2) {
+		order: 1;
+	}
 }
