--- a/#source/scss/structure/content/story.scss
+++ b/#source/scss/structure/content/story.scss
@@ -1,26 +1,96 @@
 .story {
+	margin: 120px 0 160px 0;
 }
 
 .content__story {
+	max-width: 1300px;
+	margin: 0 auto;
 }
 
 .story__row {
+	display: flex;
 }
 
 .story__column {
+	flex: 1 0 50%;
+}
+
+.story__column:nth-child(1) {
+	margin-top: 145px;
 }
 
 .story__wrapper {
+	height: 100%;
+	display: flex;
+	flex-direction: column;
 }
 
-.title {
+.title--left {
+	text-align: left;
+}
+.text--left {
+	text-align: left;
+}
+.story__text {
+	padding: 0 135px 0 0;
+	margin: 60px 0;
+	flex: 1 1 auto;
 }
 
-.text {
-}
-
-.bth {
+.storu__bth {
+	height: 60px;
+	width: 300px;
+	text-indent: -90px;
+	margin: 0 0 60px 0;
 }
 
 .story__image {
+	width: 100%;
+	height: 100%;
+	border: 1px solid #000;
+	position: relative;
+	top: 0;
+	left: 0;
+	padding: 0 0 92.31% 0;
+}
+.story__image img {
+	position: absolute;
+	top: 0;
+	left: 0;
+	height: 100%;
+	width: 100%;
+}
+
+@media (max-width: 1024px) {
+	.story__row {
+		display: flex;
+		flex-wrap: wrap;
+	}
+
+	.story__column {
+		flex: 1 1 100%;
+	}
+
+	.story__column:nth-child(2) {
+		margin-top: 25px;
+	}
+
+	.title--left {
+		text-align: center;
+	}
+	.text--left {
+		text-align: center;
+	}
+	.story__text {
+		padding: 0 20px;
+		margin: 60px 0;
+	}
+
+	.storu__bth {
+		display: inline-block;
+		position: relative;
+		top: 0;
+		left: 50%;
+		transform: translate(-50%);
+	}
 }
