--- a/#source/scss/structure/header.scss
+++ b/#source/scss/structure/header.scss
@@ -38,10 +38,12 @@
 .nav__list {
 	display: flex;
 	margin: 0 -3%;
+	border: 1px solid #000;
 }
 
 .nav__item {
 	margin: 0 3%;
+	border: 1px solid #000;
 }
 
 .nav__item a {
@@ -62,8 +64,9 @@
 	border: 1px solid #000;
 	display: flex;
 }
-// ******************column************************
+
 // ************************************************
+// ******************column************************
 
 .icon__column:nth-child(1) {
 	border: 1px solid rgb(243, 4, 4);
@@ -138,6 +141,9 @@
 }
 
 .bth {
+	position: relative;
+	top: 0;
+	left: 0;
 	border: 1px solid #036b416b;
 	color: #ffffff;
 	font-family: "Muli-Regular";
@@ -145,8 +151,7 @@
 	height: 70px;
 	background-color: #0aa566;
 	border-radius: 35px;
-	text-indent: 40px;
-	padding-top: 20px;
+	text-indent: -70px;
 	font-size: 24px;
 	transition: transform 500ms ease;
 }
@@ -156,20 +161,16 @@
 }
 
 .header__bth {
-	display: inline-block;
 	margin-top: 105px;
-	position: relative;
-	top: 0;
-	left: 0;
 }
 
-.header__bth:after {
+.bth:after {
 	content: "";
 	position: absolute;
 	top: 23px;
 	right: 25px;
 	display: inline-block;
-	background: url(/assets/images/header/Arrow.png) center/ cover no-repeat;
+	background: url("/assets/images/header/Arrow.png") center/ cover no-repeat;
 	width: 40px;
 	height: 20px;
 }
