--- a/css/index.css
+++ b/css/index.css
@@ -260,10 +260,12 @@ body {
   display: -ms-flexbox;
   display: flex;
   margin: 0 -3%;
+  border: 1px solid #000;
 }
 
 .nav__item {
   margin: 0 3%;
+  border: 1px solid #000;
 }
 
 .nav__item a {
@@ -371,6 +373,9 @@ body {
 }
 
 .bth {
+  position: relative;
+  top: 0;
+  left: 0;
   border: 1px solid #036b416b;
   color: #ffffff;
   font-family: "Muli-Regular";
@@ -378,8 +383,7 @@ body {
   height: 70px;
   background-color: #0aa566;
   border-radius: 35px;
-  text-indent: 40px;
-  padding-top: 20px;
+  text-indent: -70px;
   font-size: 24px;
   -webkit-transition: -webkit-transform 500ms ease;
   transition: -webkit-transform 500ms ease;
@@ -395,20 +399,16 @@ body {
 }
 
 .header__bth {
-  display: inline-block;
   margin-top: 105px;
-  position: relative;
-  top: 0;
-  left: 0;
 }
 
-.header__bth:after {
+.bth:after {
   content: "";
   position: absolute;
   top: 23px;
   right: 25px;
   display: inline-block;
-  background: url(/assets/images/header/Arrow.png) center/cover no-repeat;
+  background: url("/assets/images/header/Arrow.png") center/cover no-repeat;
   width: 40px;
   height: 20px;
 }
@@ -443,12 +443,12 @@ body {
   font-size: 18px;
   line-height: 35px;
   text-align: center;
-  padding: 0 90px;
   font-family: "Muli-Regular";
 }
 
 .smoothie__text {
   margin: 60px 0 65px 0;
+  padding: 0 90px;
 }
 
 .smoothies__row {
@@ -526,10 +526,394 @@ body {
 }
 /*------------------------------------------------------------------ */
 /*------------------------------- about----------------------------- */
+.about {
+  background-color: #15876c;
+}
+
+.about__conteiner {
+  max-width: 1920px;
+  margin: 0 auto 0 0;
+  border: 1px solid #000;
+}
+
+.about__row {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  border: 1px solid #000;
+}
+
+.about__column:nth-child(1) {
+  position: relative;
+  top: 75px;
+  left: 0;
+  margin: 0px 7.2916666667%;
+  border: 1px solid #000;
+}
+
+.about__image {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  -webkit-box-pack: end;
+      -ms-flex-pack: end;
+          justify-content: flex-end;
+  height: 100%;
+}
+
+.about__image-wrapper {
+  border: 1px solid #000;
+}
+
+.about__image img {
+  width: 100%;
+  height: 100%;
+}
+
+.about__description {
+  height: 100%;
+  margin: 100px 0 60px 0;
+  border: 1px solid #000;
+}
+
+.title--white {
+  color: #ffffff;
+}
+
+.about__title {
+  font-size: 55px;
+  -moz-text-align-last: left;
+       text-align-last: left;
+}
+
+.about__title span {
+  color: #cae941;
+}
+
+.about__list {
+  margin: 70px 0 55px 0;
+}
+
+.about__item {
+  line-height: 25px;
+  margin-top: 30px;
+  padding-left: 35px;
+  position: relative;
+  top: 0;
+  left: 0;
+  color: #ffffff;
+  font-size: 21px;
+  font-family: "Muli-Regular";
+}
+
+.about__item:before {
+  content: "";
+  background: url(/assets/images/about/icon.png) center/cover no-repeat;
+  display: inline-block;
+  position: absolute;
+  top: 3px;
+  left: 0;
+  width: 20px;
+  height: 20px;
+}
+
+.about__bth {
+  font-size: 24px;
+  background-color: #15866e;
+  width: 380px;
+  height: 60px;
+  border-radius: 30px;
+  text-indent: -60px;
+  border: 1px solid #afa344;
+}
+
+.about__bth:after {
+  content: "";
+  position: absolute;
+  top: 25px;
+  right: 25px;
+  display: inline-block;
+  background: url("/assets/images/header/Arrow.png") center/cover no-repeat;
+  width: 30px;
+  height: 10px;
+}
+
+@media (max-width: 1420px) {
+  .about__column:nth-child(1) {
+    position: relative;
+    top: 75px;
+    left: 0;
+    margin: 0px 1.0416666667% 0 0;
+    border: 1px solid #000;
+  }
+
+  .about__column {
+    -webkit-box-flex: 1;
+        -ms-flex: 1 0 50%;
+            flex: 1 0 50%;
+  }
+}
+@media (max-width: 1024px) {
+  .about__column {
+    -webkit-box-flex: 1;
+        -ms-flex: 1 1 auto;
+            flex: 1 1 auto;
+  }
+
+  .about__row {
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -ms-flex-wrap: wrap;
+        flex-wrap: wrap;
+  }
+
+  .about__column:nth-child(1) {
+    -webkit-box-ordinal-group: 3;
+        -ms-flex-order: 2;
+            order: 2;
+  }
+
+  .about__column:nth-child(2) {
+    -webkit-box-ordinal-group: 2;
+        -ms-flex-order: 1;
+            order: 1;
+  }
+}
 /*------------------------------------------------------------------ */
 /*---------------------------- products ---------------------------- */
+.products__conteiner {
+  max-width: 1920px;
+  margin: 0 auto;
+}
+
+.products__row {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -ms-flex-wrap: wrap;
+      flex-wrap: wrap;
+  border: 1px solid #000;
+}
+
+.products__column {
+  -webkit-box-flex: 1;
+      -ms-flex: 1 0 25%;
+          flex: 1 0 25%;
+  background-color: #62291a;
+}
+
+.products__column--green {
+  background-color: #198a6f;
+}
+
+.products__column--yellow {
+  background-color: #fbb33f;
+}
+
+.products__column--orang {
+  background-color: #c0481d;
+}
+
+@media (max-width: 1420px) {
+  .products__column {
+    -webkit-box-flex: 1;
+        -ms-flex: 1 0 50%;
+            flex: 1 0 50%;
+  }
+}
+@media (max-width: 764px) {
+  .products__column {
+    -webkit-box-flex: 1;
+        -ms-flex: 1 1 100%;
+            flex: 1 1 100%;
+  }
+}
+.products__wrapper {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  height: 100%;
+  border: 1px solid #000;
+}
+
+.products__image {
+  text-align: center;
+  margin: 130px 0 40px;
+}
+
+.title-h3 {
+  text-align: center;
+  font-size: 24px;
+  line-height: 22px;
+  color: #ffffff;
+  font-family: "Muli-Regular";
+  font-weight: bold;
+}
+
+.products__text {
+  margin-top: 10px;
+  -webkit-box-flex: 1;
+      -ms-flex: 1 1 auto;
+          flex: 1 1 auto;
+  border: 1px solid #000;
+  color: #ffffff;
+  font-style: italic;
+  font-family: "Muli-Regular";
+}
+
+.products__bth {
+  -ms-flex-item-align: center;
+      -ms-grid-row-align: center;
+      align-self: center;
+  width: 200px;
+  height: 60px;
+  margin: 60px 0 80px 0;
+  text-indent: -70px;
+  border: 1px solid #fff9f9;
+  background-color: #ffffff00;
+}
+
+.products__bth:after {
+  content: "";
+  position: absolute;
+  top: 23px;
+  right: 35px;
+  display: inline-block;
+  background: url("/assets/images/products/Arrow.png") center/cover no-repeat;
+  width: 30px;
+  height: 15px;
+}
+
 /*------------------------------------------------------------------ */
 /*-------------------------------- story --------------------------- */
+.story {
+  margin: 120px 0 160px 0;
+}
+
+.content__story {
+  max-width: 1300px;
+  margin: 0 auto;
+}
+
+.story__row {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+}
+
+.story__column {
+  -webkit-box-flex: 1;
+      -ms-flex: 1 0 50%;
+          flex: 1 0 50%;
+}
+
+.story__column:nth-child(1) {
+  margin-top: 145px;
+}
+
+.story__wrapper {
+  height: 100%;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+}
+
+.title--left {
+  text-align: left;
+}
+
+.text--left {
+  text-align: left;
+}
+
+.story__text {
+  padding: 0 135px 0 0;
+  margin: 60px 0;
+  -webkit-box-flex: 1;
+      -ms-flex: 1 1 auto;
+          flex: 1 1 auto;
+}
+
+.storu__bth {
+  height: 60px;
+  width: 300px;
+  text-indent: -90px;
+  margin: 0 0 60px 0;
+}
+
+.story__image {
+  width: 100%;
+  height: 100%;
+  border: 1px solid #000;
+  position: relative;
+  top: 0;
+  left: 0;
+  padding: 0 0 92.31% 0;
+}
+
+.story__image img {
+  position: absolute;
+  top: 0;
+  left: 0;
+  height: 100%;
+  width: 100%;
+}
+
+@media (max-width: 1024px) {
+  .story__row {
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -ms-flex-wrap: wrap;
+        flex-wrap: wrap;
+  }
+
+  .story__column {
+    -webkit-box-flex: 1;
+        -ms-flex: 1 1 100%;
+            flex: 1 1 100%;
+  }
+
+  .story__column:nth-child(2) {
+    margin-top: 25px;
+  }
+
+  .title--left {
+    text-align: center;
+  }
+
+  .text--left {
+    text-align: center;
+  }
+
+  .story__text {
+    padding: 0 20px;
+    margin: 60px 0;
+  }
+
+  .storu__bth {
+    display: inline-block;
+    position: relative;
+    top: 0;
+    left: 50%;
+    -webkit-transform: translate(-50%);
+        -ms-transform: translate(-50%);
+            transform: translate(-50%);
+  }
+}
 /*------------------------------------------------------------------ */
 /*---------------------- testimonials------------------------------- */
 /*------------------------------------------------------------------ */
