--- a/#source/scss/structure/content/story.scss
+++ b/#source/scss/structure/content/story.scss
@@ -17,6 +17,7 @@
 
 .story__column:nth-child(1) {
 	margin-top: 145px;
+	padding-left: 20px;
 }
 
 .story__wrapper {
@@ -47,7 +48,6 @@
 .story__image {
 	width: 100%;
 	height: 100%;
-	border: 1px solid #000;
 	position: relative;
 	top: 0;
 	left: 0;
