--- a/#source/scss/structure/content/testimonials.scss
+++ b/#source/scss/structure/content/testimonials.scss
@@ -1,32 +1,68 @@
 .testimonials {
 }
 
-.title {
+.testimonials__wrapper {
+	background-color: #643318;
+	padding: 120px 0 80px 0;
+}
+.title--color {
+	color: #f2612d;
 }
 
 .testimonials__row {
+	display: flex;
+	justify-content: center;
+	margin: 130px 0 120px 0;
 }
 
-.testimonials__column {
+.testimonials__column:nth-child(1) {
+	margin-right: 50px;
 }
 
-.text {
+.testimonials__text {
+	display: inline-block;
+	max-width: 460px;
+	color: #ffffff;
 }
 
 .testimonials__sub-text {
+	text-align: center;
 }
 
 .testimonials-name__user {
+	display: inline-block;
+	margin-top: 35px;
+	color: #f7ae3b;
 }
 
 .testimonials-avatar {
 }
 
 .sidebar {
+	display: flex;
+	justify-content: center;
+	align-items: center;
 }
 
-.arrow__left {
-}
-
+.arrow__left,
 .arrow__right {
+	background-color: rgba(255, 255, 0, 0);
+	margin: 0 45px;
+}
+
+.arrow__left img {
+	transform: rotate(180deg);
+}
+
+@media (max-width: 764px) {
+	.testimonials__row {
+		flex-wrap: wrap;
+	}
+	.testimonials__column {
+		flex: 1 1 100%;
+		text-align: center;
+	}
+	.testimonials__column:nth-child(1) {
+		margin: 0 0 50px 0;
+	}
 }
