--- a/css/index.css
+++ b/css/index.css
@@ -1147,6 +1147,60 @@ body {
 }
 /*------------------------------------------------------------------ */
 /*-------------------- instagram------------------------------------ */
+.instagram__row {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+}
+
+.instagram__column {
+  -webkit-box-flex: 1;
+      -ms-flex: 1 0 20%;
+          flex: 1 0 20%;
+}
+
+.instagram__image {
+  position: relative;
+  top: 0;
+  left: 0;
+  height: 100%;
+  padding: 0 0 103.76% 0;
+}
+
+.instagram__image img {
+  position: absolute;
+  top: 0;
+  left: 0;
+  height: 100%;
+  width: 100%;
+}
+
+.instagram__image:before {
+  content: "";
+  display: inline-block;
+  background: url("/assets/images/istagram/Icon-inst.png") center/cover no-repeat;
+  position: absolute;
+  bottom: 20px;
+  right: 20px;
+  width: 26px;
+  height: 26px;
+}
+
+@media (max-width: 764px) {
+  .instagram__row {
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -ms-flex-wrap: wrap;
+        flex-wrap: wrap;
+  }
+
+  .instagram__column {
+    -webkit-box-flex: 1;
+        -ms-flex: 1 1 100%;
+            flex: 1 1 100%;
+  }
+}
 /*------------------------------------------------------------------ */
 /*-------------------- Footer(подвал документа) -------------------- */
 /*--**************************************************************-- */
