--- a/#source/scss/structure/content/products.scss
+++ b/#source/scss/structure/content/products.scss
@@ -87,7 +87,7 @@
 	top: 23px;
 	right: 35px;
 	display: inline-block;
-	background: url("/assets/images/products/Arrow.png") center/ cover no-repeat;
+	background: url("../assets/images/products/Arrow.png") center/ cover no-repeat;
 	width: 30px;
 	height: 15px;
 }
