--- a/#source/scss/structure/content/about.scss
+++ b/#source/scss/structure/content/about.scss
@@ -71,7 +71,7 @@
 }
 .about__item:before {
 	content: "";
-	background: url(/assets/images/about/icon.png) center/cover no-repeat;
+	background: url("../assets/images/about/icon.png") center/cover no-repeat;
 	display: inline-block;
 	position: absolute;
 	top: 3px;
@@ -95,7 +95,7 @@
 	top: 25px;
 	right: 25px;
 	display: inline-block;
-	background: url("/assets/images/header/Arrow.png") center/ cover no-repeat;
+	background: url("../assets/images/header/Arrow.png") center/ cover no-repeat;
 	width: 30px;
 	height: 10px;
 }
