--- a/#source/scss/structure/content/blog.scss
+++ b/#source/scss/structure/content/blog.scss
@@ -71,7 +71,7 @@
 	top: 7px;
 	right: -30px;
 	display: inline-block;
-	background: url("/assets/images/header/Arrow.png") center/ cover no-repeat;
+	background: url("../assets/images/header/Arrow.png") center/ cover no-repeat;
 	width: 20px;
 	height: 10px;
 }
@@ -96,7 +96,7 @@
 	position: absolute;
 	top: 0;
 	left: -40px;
-	background: url("/assets/images/blog/Icon.png") center/ cover no-repeat;
+	background: url("../assets/images/blog/Icon.png") center/ cover no-repeat;
 	width: 26px;
 	height: 26px;
 }
