--- a/#source/scss/structure/footer.scss
+++ b/#source/scss/structure/footer.scss
@@ -1,62 +1,168 @@
 .footer {
-}
-
-.conteiner {
+	background-color: #faaa3f;
 }
 
 .footer__row {
+	display: flex;
 }
 
 .footer__column {
+	margin: 80px 0 95px 0;
+	flex: 1 0 25%;
+	border: 1px solid #000;
+}
+.footer__column:nth-child(2) {
+	flex: 1 0 0%;
+	margin-right: 160px/1750px * 100%;
+}
+.footer__column:nth-child(3) {
+	flex: 1 0 0%;
+	margin-right: 160px/1750px * 100%;
+}
+
+.footer__column:nth-child(1) {
+	align-self: center;
 }
 
 .footer__image {
 }
 
-.title-h3 {
+.footer__title {
+	text-align-last: left;
+	margin-bottom: 45px;
 }
 
 .footer__list {
 }
 
 .footer__item {
+	margin-top: 20px;
+	color: #6d450c;
+}
+.footer__item a {
+	color: #6d450c;
+	font-size: 18px;
+	font-family: "Muli-Bold";
+}
+.footer__list:nth-child(2) .footer__item {
+	margin-top: 0px;
 }
 
-.icon__column {
+.footer-icon__list {
+	border: 1px solid #000;
+	display: flex;
+	margin: 0 -10px;
 }
 
-.icon__list {
+.footer-icon__item {
+	margin: 0 10px;
 }
 
-.icon__link {
-}
-
-.title {
+.footer-icon__link {
 }
 
 .input {
+	margin-bottom: 35px;
 }
 
-.input-search {
+.input__search {
+	position: relative;
+	top: 0;
+	left: 0;
+	height: 60px;
+	width: 95.57%;
+	border-radius: 35px;
+}
+.input__search:before {
+	content: "";
+	position: absolute;
+	top: 0;
+	left: 0;
+	background: url("../assets/images/footer/Icon.png") center/ cover no-repeat;
+	width: 40px;
+	height: 20px;
+	border: 1px solid #000;
 }
 
-.icon-letter {
+.input [placeholder="Subscribe to our newsletter"] {
+	font-size: 17px;
+	font-family: "Muli-Bold";
+	color: #6d450c;
+	padding-left: 70px;
 }
 
+.footer__row--df {
+	display: flex;
+	justify-content: center;
+}
 .footer__text {
+	position: relative;
+	top: 0;
+	left: 0;
+	font-size: 18px;
+	color: #6d450c;
+	border: 1px solid #000;
+	margin: 0 100px/523.1px * 100%;
 }
 
+.footer__text:before {
+	content: "";
+	position: absolute;
+	top: -25px;
+	left: -60px;
+	background: url("../assets/images/footer/Arrow.png") center/ cover no-repeat;
+	font-size: 18px;
+	width: 48px;
+	height: 43px;
+	color: #6d450c;
+}
+.footer__bottom--bg {
+	background-color: #68301c;
+}
 .footer__bottom {
+	display: flex;
+	align-items: center;
+	position: relative;
+	top: 0;
+	left: 0;
+	height: 60px;
 }
 
 .author-rights {
-}
-
-.text {
+	flex-grow: 0.5;
+	text-align: right;
+	border: 1px solid #000;
+	color: #af8a82;
+	font-size: 13px;
+	font-family: "Muli-Bold";
 }
 
 .footer__bottom-text {
+	border: 1px solid #000;
+	flex-grow: 0.44;
+	text-align: right;
 }
 
 .footer__bottom-image {
+	position: absolute;
+	top: -30px;
+	right: 0;
+	width: 50px;
+	height: 50px;
+	border-radius: 5px;
+	background-color: #f2662f;
+	transition: transform 500ms cubic-bezier(0.17, 0.67, 0.6, 1.31);
+}
+.footer__bottom-image:hover {
+	transform: translate(0, -15px);
+}
+.footer__bottom-image:before {
+	content: "";
+	position: absolute;
+	top: 15px;
+	left: 50%;
+	transform: translate(-50%);
+	background: url("../assets/images/footer/arrow2.png") center/ cover no-repeat;
+	width: 13px;
+	height: 25px;
 }
