--- a/#source/scss/structure/header.scss
+++ b/#source/scss/structure/header.scss
@@ -33,12 +33,12 @@
 }
 
 .header__nav {
+	border: 1px solid #000;
 }
 
 .nav__list {
 	display: flex;
 	margin: 0 -3%;
-	border: 1px solid #000;
 }
 
 .nav__item {
@@ -118,6 +118,10 @@
 // ******************column************************
 // ************************************************
 .icon__list {
+	transition: transform 1s ease;
+}
+.icon__list:hover {
+	transform: rotate(360deg);
 }
 
 .icon__link {
@@ -170,7 +174,7 @@
 	top: 23px;
 	right: 25px;
 	display: inline-block;
-	background: url("/assets/images/header/Arrow.png") center/ cover no-repeat;
+	background: url("../assets/images/header/Arrow.png") center/ cover no-repeat;
 	width: 40px;
 	height: 20px;
 }
