--- a/#source/scss/fonts/fonts.scss
+++ b/#source/scss/fonts/fonts.scss
@@ -1,41 +1,42 @@
 @font-face {
 	font-family: "Muli-Bold";
-	src: local("☺"), url("/assets/fonts/Muli-Bold.woff") format("woff");
+	src: local("☺"), url("../assets/fonts/Muli-Bold.woff") format("woff");
 	font-weight: 600;
 	font-style: normal;
 }
 @font-face {
 	font-family: "Muli-ExtraBold";
-	src: local("☺"), url("/assets/fonts/Muli-ExtraBold.woff") format("woff");
+	src: local("☺"), url("../assets/fonts/Muli-ExtraBold.woff") format("woff");
 	font-weight: 600;
 	font-style: normal;
 }
 @font-face {
 	font-family: "Muli-ExtraBoldItalic";
-	src: local("☺"), url("/assets/fonts/Muli-ExtraBoldItalic.woff") format("woff");
+	src: local("☺"), url("../assets/fonts/Muli-ExtraBoldItalic.woff") format("woff");
 	font-weight: 600;
 	font-style: italic;
 }
 @font-face {
 	font-family: "Muli-Regular";
-	src: local("☺"), url("/assets/fonts/Muli-Regular.woff") format("woff");
+	src: local("☺"), url("../assets/fonts/Muli-Regular.woff") format("woff");
 	font-weight: 400;
 	font-style: normal;
 }
 @font-face {
 	font-family: "Poppins-Medium";
-	src: url("/assets/fonts/Poppins-Medium.eot");
-	src: local("☺"), url("/assets/fonts/Poppins-Medium.woff") format("woff"),
-		url("/assets/fonts/Poppins-Medium.ttf") format("truetype"), url("/assets/fonts/Poppins-Medium.svg") format("svg");
+	src: url("../assets/fonts/Poppins-Medium.eot");
+	src: local("☺"), url("../assets/fonts/Poppins-Medium.woff") format("woff"),
+		url("../assets/fonts/Poppins-Medium.ttf") format("truetype"),
+		url("../assets/fonts/Poppins-Medium.svg") format("svg");
 	font-weight: 500;
 	font-style: normal;
 }
 @font-face {
 	font-family: "Poppins-SemiBold";
-	src: url("/assets/fonts/Poppins-SemiBold.eot");
-	src: local("☺"), url("/assets/fonts/Poppins-SemiBold.woff") format("woff"),
-		url("/assets/fonts/Poppins-SemiBold.ttf") format("truetype"),
-		url("/assets/fonts/Poppins-SemiBold.svg") format("svg");
+	src: url("../assets/fonts/Poppins-SemiBold.eot");
+	src: local("☺"), url("../assets/fonts/Poppins-SemiBold.woff") format("woff"),
+		url("../assets/fonts/Poppins-SemiBold.ttf") format("truetype"),
+		url("../assets/fonts/Poppins-SemiBold.svg") format("svg");
 	font-weight: 600;
 	font-style: normal;
 }
