--- a/#source/scss/structure/content/blog.scss
+++ b/#source/scss/structure/content/blog.scss
@@ -61,7 +61,6 @@
 	position: relative;
 	top: 0;
 	left: 0;
-	font-weight: 900;
 	font-family: "Muli-ExtraBoldItalic";
 }
 
@@ -80,15 +79,13 @@
 	text-align: center;
 }
 .blog__title-bottom span {
+	font-size: 24px;
 	text-align: center;
 	display: inline-block;
 	position: relative;
 	top: 0;
-	left: 0;
-	text-align: center;
 	margin-bottom: 50px;
 	color: #0aa566;
-	font-size: 24px;
 }
 .blog__title-bottom span:before {
 	content: "";
@@ -120,5 +117,8 @@
 	}
 	.blog__image {
 		margin: 50px 0 0 0;
+	}
+	.blog__time {
+		text-align: center;
 	}
 }
